<resources>
    <string name="app_name">Digital House Foods</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="bt_login">LOG IN</string>
    <string name="or">OR</string>
    <string name="bt_register">REGISTER</string>
    <string name="hint_name">Name</string>
    <string name="hint_Rpassword">Repeate password</string>
    <string name="register">Register</string>
    <string name="nome_restaurante">Tony Romas</string>
    <string name="endereco_restaurante">AV. Lavandisca, 717 - Indianópolis, São Paulo</string>
    <string name="hora_restaurante">Fecha às</string>
    <string name="hora_restaurante_2">22:00</string>
    <string name="pratos">Pratos principais</string>
    <string name="nome_prato">Salada com molho Gengibre</string>
    <string name="or2">________________________</string>
</resources>