<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/ToolBar"
        app:title="@string/app_name"
        android:layout_marginBottom="20dp"
        app:titleTextColor="@color/white">


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:hintTextColor="@color/textColor"
        app:boxStrokeColor="@color/textColor">

        <EditText
            android:textCursorDrawable="@color/ToolBar"
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_email"
            android:textSize="15sp"
            android:textColor="@color/BarraSuperior"
            android:textColorHint="@color/Gray"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:hintTextColor="@color/textColor"
        app:boxStrokeColor="@color/textColor">



        <EditText
            android:textCursorDrawable="@color/ToolBar"
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textSize="15sp"
            android:textColor="@color/BarraSuperior"
            android:textColorHint="@color/Gray"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/Bt_cor"
        android:fontFamily="sans-serif"
        android:text="@string/bt_login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or2"
            android:layout_margin="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.117"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or2"
            android:layout_margin="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/bt_register"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/Bt_cor_register"

        android:fontFamily="sans-serif"
        android:text="@string/bt_register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>