<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/arrow_back24"
        android:background="@color/ToolBar"
        app:title="@string/register"
        app:titleTextColor="@color/white">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:hintTextColor="@color/textColor"
        app:boxStrokeColor="@color/textColor">
        <EditText
            android:textCursorDrawable="@color/ToolBar"
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/hint_name"
            android:textSize="15sp"
            android:textColor="@color/BarraSuperior"
            android:textColorHint="@color/Gray"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:hintTextColor="@color/textColor"
        app:boxStrokeColor="@color/textColor">

        <EditText
            android:textCursorDrawable="@color/ToolBar"
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_email"
            android:textSize="15sp"
            android:textColor="@color/BarraSuperior"
            android:textColorHint="@color/Gray"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:hintTextColor="@color/textColor"
        app:boxStrokeColor="@color/textColor">

        <EditText
            android:textCursorDrawable="@color/ToolBar"
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_password"
            android:textSize="15sp"
            android:textColor="@color/BarraSuperior"
            android:textColorHint="@color/Gray"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:hintTextColor="@color/textColor"
        app:boxStrokeColor="@color/textColor">

        <EditText
            android:textCursorDrawable="@color/ToolBar"
            android:id="@+id/ed_Rpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/hint_Rpassword"
            android:textSize="15sp"
            android:textColor="@color/BarraSuperior"
            android:textColorHint="@color/Gray"
            android:background="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:id="@+id/bt_register_main"
        android:layout_width="360dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="280dp"
        android:backgroundTint="@color/Bt_cor"
        android:fontFamily="sans-serif"
        android:text="@string/bt_register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>