<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="377dp"
        android:layout_height="263dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_Restaurante"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image1"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_Nome_Restaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="5dp"
            android:layout_marginTop="178dp"
            android:layout_marginEnd="100dp"
            android:text="@string/nome_restaurante"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Endereço_Restaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="5dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="32dp"
            android:text="@string/endereco_restaurante"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginStart="5dp"
            android:layout_marginTop="226dp"
            android:layout_marginEnd="150dp"
            android:text="@string/hora_restaurante"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_Hora_Restaurante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="105dp"
            android:text="@string/hora_restaurante_2"
            android:textColor="@color/textColor"
            android:textSize="15sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>

</LinearLayout>